# fossredder

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  ARCHITECTURE_TARGET.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  CONTRIBUTING.md  CppProperties.json  Doxyfile  LICENSE  README.md  ROADMAP.md  UI_SRC_MODELS_CONTROLLERS_ANALYSIS.md  UI_SRC_MODEL_PREANALYSIS.md  bootstrap.ps1  codecov.yml  dumpbin_dependencies.txt  fossredder.db  notes  qml_importview_result.txt  qml_statementdraft_result.txt  qml_statementdraft_result_new.txt  qmllint-ui-qml.json  ui_architecture_target.md  vcpkg.json
api/: CMakeLists.txt
app/: CMakeLists.txt
app/i18n/: fossredder_de.catalog.xml  fossredder_de.ts
app/include/app/: pch.h
app/src/: Environment.cpp  Environment.h  main.cpp  main_qml.cpp
core/: CMakeLists.txt
core/include/core/: pch.h
core/src/analysis/: AnalysisController.cpp  AnalysisEngine.cpp  AnalysisStrategy.h  Filter.cpp  FilteredTransactions.h  OutputTypeResolver.cpp  TransactionCollector.cpp  TransactionCollector.h
core/src/application/: AnalysisRequestComposer.cpp  AnalysisService.cpp  AppStateFacade.cpp  AppStateManager.cpp  CatalogDraftAppliers.h  CatalogMutationHelpers.h  CatalogService.cpp  ConfigManager.cpp  DraftFinalizer.cpp  PropertyMetricsService.cpp  StateHydrator.cpp  StateProjector.cpp  WorkspaceSession.cpp
core/src/controllers/: AppStateController.cpp  CsvController.cpp  ExportController.cpp  FileController.cpp  ImportController.cpp  StatementController.cpp  XlsxController.cpp
core/src/errors/: DebuggerErrorReporter.cpp  ErrorReporterRegistry.cpp
core/src/export/: AnalysisExportService.cpp  CsvExporter.cpp  ExportService.cpp  PropertyContractMatrix.h  XlsxExporter.cpp
core/src/import/: ActorMatcher.cpp  DefaultImportStatementStrategy.cpp  DraftLinking.cpp  ImportPageRequests.h  ImportPipelineHelpers.cpp  ImportPipelineHelpers.h  ImportStatement.cpp  ImportStatementStrategy.h  ImportStrategySupport.cpp  ImportStrategySupport.h  PropertyMatcher.cpp
core/src/jobs/: JobManager.cpp  JobManager.h  JobSystem.cpp  Scheduler.cpp
core/src/managers/: AppStateManager.cpp  ConfigManager.cpp  FileManager.cpp  SqliteRegistry.cpp  StorageManager.cpp
core/src/models/: Actor.cpp  Analysis.cpp  Annual.cpp  BookingGroup.cpp  Contract.cpp  Property.cpp  Statement.cpp  Transaction.cpp
core/src/parser/: DefaultStatementParser.cpp  DefaultTransactionParser.cpp  ParserHelpers.cpp  ParserHeuristics.cpp  StatementParseHelpers.cpp
core/src/services/: DefaultExtractionStrategy.cpp  StatementExtractionService.cpp
core/src/storage/: SqliteRegistry.cpp  StorageManager.cpp
core/src/utils/: Environment.cpp  StableId.h  UniqId.h  Util.cpp  Util.h
core/tests/: CMakeLists.txt  TestAppStateController.cpp  TestStorageManager.cpp
core/tests/interaction/: TestAppStateControllerInteraction.cpp  TestAppStateFacadeInteraction.cpp  TestAppStateManagerInteraction.cpp  TestConfigManagerInteraction.cpp  TestStorageManagerInteraction.cpp
core/tests/unit/: TestAnalysisEngine.cpp  TestAppStateController.cpp  TestAppStateFacade.cpp  TestAppStateManager.cpp  TestAppStateManagerExtended.cpp  TestApplicationServices.cpp  TestConfigManager.cpp  TestDefaultStatementParser.cpp  TestDraftFinalizer.cpp  TestDraftLinking.cpp  TestErrorReporterRegistry.cpp  TestExportController.cpp  TestExportService.cpp  TestFilter.cpp  TestJobSystem.cpp  TestParserHelpers.cpp  TestStateTransforms.cpp  TestStorageManager.cpp  TestWorkspaceSession.cpp
debug/: CMakeLists.txt
debug/20251119_223453/poppler/: log
debug/include/debug/: DebugDefaults.h  ErrorReporter.h  FileDebugger.h  IDebugger.h  RunManager.h  SpdlogDebugger.h  pch.h
debug/src/: ErrorReporter.cpp  FileDebugger.cpp  RunManager.cpp  SpdlogDebugger.cpp
debug/tests/unit/: TestDebuggerErrorReporter.cpp
infra/analysis-image-renderer/: CMakeLists.txt
infra/analysis-image-renderer/src/: OpenCvAnalysisImageRendererAdapter.cpp
infra/archive/: CMakeLists.txt
infra/archive/src/: ZipArchiveAdapter.cpp
infra/image-processing/: CMakeLists.txt
infra/image-processing/src/: CropAdapter.cpp  DenoiseAdapter.cpp  DetectAdapter.cpp  MaskAdapter.cpp  OpenCvImageProcessorAdapter.cpp
infra/pdf-rendering/: CMakeLists.txt
infra/pdf-rendering/src/: PopplerCore.cpp  PopplerPdfRendererAdapter.cpp
infra/text-recognition/: CMakeLists.txt
infra/text-recognition/src/: TesseractCore.cpp  TesseractTextRecognizerAdapter.cpp
infra/xlsx-writer/: CMakeLists.txt
infra/xlsx-writer/src/: XlntTableWriterAdapter.cpp
persistence/: CMakeLists.txt
persistence/include/persistence/: AppStateStore.h  AppStateStoreResult.h  Factory.h  ISqlConnectionProvider.h  SqliteDb.h  SqliteSchema.h  SqliteTransaction.h  StmtGuard.h  Uuid.h  WorkspaceStateStore.h  pch.h
persistence/src/: AppStateStore.cpp  Factory.cpp  RepositoryDiagnostics.h  SqliteDb.cpp  SqliteRegistry.cpp  SqliteSchema.cpp  SqliteTransaction.cpp  WorkspaceStateStore.cpp
persistence/src/repositories/: SqliteActorRepository.cpp  SqliteAnalysisRepository.cpp  SqliteAnnualRepository.cpp  SqliteBookingGroupRepository.cpp  SqliteConfigRepository.cpp  SqliteContractRepository.cpp  SqliteExportLogRepository.cpp  SqliteImportLogRepository.cpp  SqlitePropertyRepository.cpp  SqliteStatementDraftRepository.cpp  SqliteStatementRepository.cpp  SqliteTransactionDraftRepository.cpp  SqliteTransactionRepository.cpp
persistence/tests/repositories/: TestActorRepository.cpp  TestAnalysisRepository.cpp  TestAnnualRepository.cpp  TestContractRepository.cpp  TestExportLogRepository.cpp  TestImportLogRepository.cpp  TestPropertyRepository.cpp  TestStatementDraftRepository.cpp  (+3 more)
services/opencv/: CMakeLists.txt
services/poppler/: CMakeLists.txt
services/tesseract/: CMakeLists.txt
ui/: .qmlls.ini  CMakeLists.txt  MainWindow.cpp
ui/include/: MainWindow.h
ui/qml/: AnnualView.qml  BookingGroupView.qml  Main.qml  StatementsView.qml  TransactionList.qml  TransactionView.qml  qml.qrc  qml_additions.txt
ui/res/: resources.qrc
ui/src/: MainWindow.cpp  UiActions.cpp
(+1574 files in other folders)
